--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dinengros
 
-version: 1.0.0+1
+version: 1.0.1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -22,12 +22,14 @@ dependencies:
   dropdown_search: ^0.4.9
   fluttertoast: ^7.1.6
   font_awesome_flutter: ^8.12.0
+  url_launcher: ^5.7.10
   device_preview:
   audioplayers: ^0.16.2
   flutter_screenutil: ^4.0.3
   progress_dialog: ^1.2.4
   flutter_typeahead: ^2.0.0
   flutter_svg: ^0.18.0
+  package_info: ^0.4.3+4
 
 
 dev_dependencies:
